# fastapi-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: build-and-push-docker.yml  deploy-on-push-to-main.yml  run-acceptance-test.yml  test-app-on-pr.yml  test-app.yml
.kube/: deployment.yml  ingress.yml  secret.yml  service.yml
fastapi_starter/: settings.py
fastapi_template/: __init__.py  main.py  settings.py
tests/: test_main.py
tests/acceptance/: test_main.py
tests/integration/: test_main.py
tests/load/: test_main.py
tests/unit/: test_main.py
