[tool.poetry]
name = "fastapi_starter"
version = "0.1.0"
description = "A simple starter for a FastAPI application"
authors = ["unruffled-nightingale <unruffled.nightingale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
