[tool.poetry]
name = "fastapi_starter"
version = "0.1.0"
description = "A simple starter for a FastAPI application"
authors = ["unruffled-nightingale <unruffled.nightingale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
codespell = "*"
coverage = "*"
flake8 = "*"
flake8-isort = "*"
flake8-bugbear = "*"
flake8-deprecated = "*"
mypy = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
