[tool.poetry]
name = "fastapi_starter"
version = "0.1.0"
description = "A simple starter for a FastAPI application"
authors = ["unruffled-nightingale <unruffled.nightingale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "~0.79"
requests = "~2"
types-requests = "~2"
uvicorn = { extras = ["standard"], version = "~0.18" }

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"
testcontainers = "~3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
